
  * dropunused behavior change: Now refuses to drop the last copy of a
    file, unless you use the --force.
    This was the last place in git-annex that could remove data referred
    to by the git history, without being forced.
    Like drop, dropunused checks remotes, and honors the global
    annex.numcopies setting. (However, .gitattributes settings cannot
    apply to unused files.) 
  * Add status message to XMPP presence tag, to identify to others that
    the client is a git-annex client. Closes: #717652
  * webapp: When creating a repository on a removable drive, set
    core.fsyncobjectfiles, to help prevent data loss when the drive is yanked.
  * Always build with -threaded, to avoid a deadlock when communicating with
    gpg.
  * unused: No longer shows as unused tmp files that are actively being
    transferred.
  * assistant: Fix NetWatcher to not sync with remotes that have
    remote.<name>.annex-sync set to false.
  * assistant: Fix deadlock that could occur when adding a lot of files
    at once in indirect mode.
  * assistant: Fix bug that caused it to stall when adding a very large
    number of files at once (around 5 thousand).

 -- Joey Hess <joeyh@debian.org>  Tue, 23 Jul 2013 12:39:48 -0400

git-annex (4.20130723) unstable; urgency=low

  * Fix data loss bug when adding an (uncompressed) tarball of a
    git-annex repository, or other file that begins with something
    that can be mistaken for a git-annex link. Closes: #717456
  * New improved version of the git-annex logo, contributed by
    John Lawrence.
  * Rsync.net have committed to support git-annex and offer a special
    discounted rate for git-annex users. Updated the webapp to reflect this.
    http://www.rsync.net/products/git-annex-pricing.html
  * Install XDG desktop icon files.
  * Support unannex and uninit in direct mode.
  * Support import in direct mode.
  * webapp: Better display of added files.
  * fix: Preserve the original mtime of fixed symlinks.